@@ -3,6 +3,7 @@ package jasper.component;
 import io.micrometer.core.annotation.Timed;
 import jasper.domain.Ref;
 import jasper.errors.NotFoundException;
+import jasper.errors.ScrapeProtocolException;
 import jasper.plugin.Cache;
 import jasper.repository.RefRepository;
 import jasper.repository.filter.RefFilter;
@@ -11,12 +12,11 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
-import org.springframework.util.StreamUtils;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.OutputStream;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
@@ -24,10 +24,13 @@ import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
+import static jasper.domain.proj.HasTags.hasMatchingTag;
 import static jasper.plugin.Cache.bannedOrBroken;
 import static jasper.plugin.Cache.getCache;
+import static jasper.plugin.Pull.getPull;
+import static jasper.util.Logging.getMessage;
+import static org.apache.commons.io.IOUtils.closeQuietly;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
@@ -35,7 +38,10 @@ import static org.apache.commons.lang3.StringUtils.isNotBlank;
 @Component
 public class FileCache {
 	private static final Logger logger = LoggerFactory.getLogger(FileCache.class);
-	private static final String CACHE = "cache";
+	static final String CACHE = "cache";
+
+	@Autowired
+	ConfigCache configs;
 
 	@Autowired
 	RefRepository refRepository;
@@ -44,7 +50,7 @@ public class FileCache {
 	Storage storage;
 
 	@Autowired
-	Optional<Fetch> fetch;
+	Fetch fetch;
 
 	@Autowired
 	Images images;
@@ -69,9 +75,13 @@ public class FileCache {
 	}
 
 	@Timed(value = "jasper.cache", histogram = true)
-	public void preFetch(String url, String origin) {
+	public void preFetch(String url, String origin, boolean thumbnail) {
 		if (exists(url, origin)) return;
-		fetch(url, origin, true);
+		if (thumbnail) {
+			fetchThumbnail(url, origin);
+		} else {
+			fetch(url, origin, true);
+		}
 	}
 
 	@Timed(value = "jasper.cache", histogram = true)
@@ -89,150 +99,219 @@ public class FileCache {
 
 	@Timed(value = "jasper.cache")
 	public String fetchString(String url, String origin) {
-		var cache = getCache(fetch(url, origin));
-		if (cache == null) return null;
-		if (bannedOrBroken(cache)) return null;
-		return new String(storage.get(origin, CACHE, cache.getId()));
-	}
-
-	@Timed(value = "jasper.cache")
-	public Ref fetch(String url, String origin) {
-		return fetch(url, origin, null, false);
-	}
-
-	@Timed(value = "jasper.cache")
-	public Ref fetch(String url, String origin, OutputStream os) {
-		return fetch(url, origin, os, false);
-	}
-
-	@Timed(value = "jasper.cache")
-	public Ref fetch(String url, String origin, boolean refresh) {
-		return fetch(url, origin, null, refresh);
-	}
-
-	@Timed(value = "jasper.cache")
-	public Ref fetch(String url, String origin, OutputStream os, boolean refresh) {
-		var ref = refRepository.findOneByUrlAndOrigin(url, origin).orElse(null);
-		var existingCache = getCache(ref);
-		if (bannedOrBroken(existingCache)) return ref;
-		if (!refresh && existingCache != null && !existingCache.isNoStore()) {
-			if (os != null) storage.stream(origin, CACHE, existingCache.getId(), os);
-			return ref;
+		var is = fetch(url, origin);
+		if (is == null) return null;
+		try (is) {
+			var cache = cache(url, origin);
+			if (cache == null) return null;
+			if (bannedOrBroken(cache)) return null;
+			return new String(is.readAllBytes());
+		} catch (IOException e) {
+			return null;
 		}
-		if (fetch.isEmpty()) return ref;
+	}
+
+	@Timed(value = "jasper.cache")
+	public InputStream fetch(String url, String origin) {
+		return fetch(url, origin, false);
+	}
+
+	@Timed(value = "jasper.cache")
+	public InputStream fetch(String url, String origin, boolean refresh) {
+		var existingCache = cache(url, origin);
+		if (bannedOrBroken(existingCache, refresh)) return null;
+		if (!refresh && existingCache != null && !existingCache.isNoStore() && storage.exists(origin, CACHE, existingCache.getId())) {
+			return storage.stream(origin, CACHE, existingCache.getId());
+		}
+		if (url.startsWith("cache:")) {
+			var id = url.substring("cache:".length());
+			if (storage.exists(origin, CACHE, id)) {
+				return storage.stream(origin, CACHE, id);
+			} else if (configs.getRemote(origin) == null) {
+				// No cache found and no remote to fetch from
+				return null;
+			}
+		}
+		if (hasMatchingTag(stat(url, origin), "+plugin/error")) return null;
 		String mimeType;
 		String id;
-		try (var res = fetch.get().doScrape(url)) {
-			if (res == null) return ref;
+		try (var res = fetch.doScrape(url, origin)) {
+			if (res == null) return null;
+			var remote = configs.getRemote(origin);
+			var pull = getPull(remote);
+			if (remote != null && (url.startsWith("cache:") || pull.isCacheProxy())) {
+				id = url.substring("cache:".length());
+				if (storage.exists(origin, CACHE, id)) return storage.stream(origin, CACHE, id);
+				return null;
+			}
 			mimeType = res.getMimeType();
-			id = storage.store(origin, CACHE, res.getInputStream());
+			try (var is = res.getInputStream()) {
+				if (existingCache != null && isNotBlank(existingCache.getId()) && !storage.exists(origin, CACHE, existingCache.getId())) {
+					id = existingCache.getId();
+					storage.storeAt(origin, CACHE, id, is);
+				} else {
+					id = storage.store(origin, CACHE, is);
+				}
+			}
 			var cache = Cache.builder()
 				.id(id)
 				.mimeType(mimeType)
 				.contentLength(storage.size(origin, CACHE, id))
 				.build();
-			if (os != null) storage.stream(origin, CACHE, id, os);
-			if (ref != null) {
-				if (existingCache != null && isNotBlank(existingCache.getId())) {
-					try {
-						storage.delete(origin, CACHE, existingCache.getId());
-					} catch (IOException e) {
-						logger.warn("Failed to delete {}", existingCache.getId());
-					}
-				}
-				return tagger.internalPlugin(url, origin, "_plugin/cache", cache, "-_plugin/delta/cache");
-			}
-			return tagger.internalPlugin(url, origin, "_plugin/cache", cache);
+			tagger.plugin(url, origin, "_plugin/cache", cache, "-_plugin/delta/cache");
+			return storage.stream(origin, CACHE, id);
+		} catch (ScrapeProtocolException e) {
+			throw e;
 		} catch (Exception e) {
-			tagger.attachError(origin,
-				tagger.internalPlugin(url, origin, "_plugin/cache", null, "-_plugin/delta/cache"),
-				"Error Fetching", e.getMessage());
+			logger.error("{} Error Fetching {}", origin, url, e);
+			var err = tagger.plugin(url, origin, "_plugin/cache", null, "-_plugin/delta/cache");
+			tagger.attachError(origin, err,
+				"Error Fetching: " + getMessage(e));
+			if (configs.getRemote(origin) != null) {
+				var cache = existingCache != null ? existingCache : Cache.builder().build();
+				cache.setBan(true);
+				tagger.plugin(url, origin, "_plugin/cache", cache);
+			}
+			return null;
 		} finally {
-			for (var other : createArchive(url, origin, getCache(ref))) cacheLater(other, origin);
+			for (var other : createArchive(url, origin, cache(url, origin))) cacheLater(other, origin);
 		}
-		return ref;
 	}
 
-	private Cache stat(String url, String origin) {
-		return getCache(refRepository.findOneByUrlAndOrigin(url, origin).orElse(null));
+	private Ref stat(String url, String origin) {
+		return refRepository.findOneByUrlAndOrigin(url, origin).orElse(null);
+	}
+
+	private Cache cache(String url, String origin) {
+		return getCache(stat(url, origin));
 	}
 
 	@Timed(value = "jasper.cache")
-	public Ref fetchThumbnail(String url, String origin, OutputStream os) {
-		var fullSize = getCache(fetch(url, origin, false));
-		if (fullSize == null) return null;
-		if (bannedOrBroken(fullSize)) return null;
-		if (fullSize.isThumbnail()) return fetch(url, origin, os, false);
-		var thumbnailId = "t_" + fullSize.getId();
-		var thumbnailUrl = "internal:" + thumbnailId;
-		if (storage.exists(origin, CACHE, thumbnailId)) {
-			return fetch(thumbnailUrl, origin, os, false);
+	public InputStream fetchThumbnail(String url, String origin) {
+		var id = "";
+		if (url.startsWith("cache:")) {
+			id = url.substring("cache:".length());
+		}
+		closeQuietly(fetch(url, origin));
+		var fullSize = cache(url, origin);
+		if (fullSize == null) {
+			if (configs.getRemote(origin) == null) return null;
 		} else {
-			var existingCache = stat(thumbnailUrl, origin);
-			if (existingCache != null && isBlank(existingCache.getId())) {
-				// If id is blank the last thumbnail generation must have failed
-				// Wait for the user to manually refresh
-				return null;
-			}
-			var data = images.thumbnail(storage.stream(origin, CACHE, fullSize.getId()));
+			id = fullSize.getId();
+		}
+		if (isBlank(id)) return null;
+		if (bannedOrBroken(fullSize)) return null;
+		if (fullSize != null && fullSize.isThumbnail()) return fetch(url, origin);
+		var thumbnailId = "t_" + id;
+		var thumbnailUrl = "cache:" + thumbnailId;
+		var existingCache = cache(thumbnailUrl, origin);
+		if (existingCache != null && isBlank(existingCache.getId())) {
+			// If id is blank the last thumbnail generation must have failed
+			// Wait for the user to manually refresh
+			return null;
+		}
+		if (storage.exists(origin, CACHE, thumbnailId)) {
+			return fetch(thumbnailUrl, origin);
+		} else {
+			var is = fetch(url, origin);
+			if (is == null) return null;
+			var data = images.thumbnail(is);
 			if (data == null) {
 				// Returning null means the full size image is already small enough to be a thumbnail
 				// Set this as a thumbnail to disable future attempts
-				fullSize.setThumbnail(true);
-				storage.stream(origin, CACHE, fullSize.getId(), os);
-				return tagger.internalPlugin(url, origin, "_plugin/cache", fullSize, "-_plugin/delta/cache");
+				if (fullSize != null) fullSize.setThumbnail(true);
+				tagger.plugin(url, origin, "_plugin/cache", fullSize, "-_plugin/delta/cache");
+				return storage.stream(origin, CACHE, id);
 			}
 			try {
+				if (storage.exists(origin, CACHE, thumbnailId)) {
+					storage.delete(origin, CACHE, thumbnailId);
+				}
 				storage.storeAt(origin, CACHE, thumbnailId, data);
-				if (os != null) StreamUtils.copy(data, os);
+				var cache = Cache.builder()
+					.id(thumbnailId)
+					.thumbnail(true)
+					.mimeType("image/png")
+					.contentLength((long) data.length)
+					.build();
+				tagger.plugin(thumbnailUrl, origin, "_plugin/cache", cache, "plugin/thumbnail");
+				return new ByteArrayInputStream(data);
 			} catch (Exception e) {
-				tagger.attachError(origin,
-					tagger.internalPlugin(thumbnailUrl, origin, "_plugin/cache", Cache.builder().thumbnail(true).build()),
-					"Error creating thumbnail", e.getMessage());
+				var err = tagger.plugin(thumbnailUrl, origin, "_plugin/cache", Cache.builder().thumbnail(true).build());
+				tagger.attachError(origin, err, "Error creating thumbnail", getMessage(e));
+				if (configs.getRemote(origin) != null) {
+					var cache = existingCache != null ? existingCache : Cache.builder().build();
+					cache.setBan(true);
+					tagger.plugin(url, origin, "_plugin/cache", cache);
+				}
 				return null;
 			}
-			var cache = Cache.builder()
-				.id(thumbnailId)
-				.thumbnail(true)
-				.mimeType("image/png")
-				.contentLength((long) data.length)
-				.build();
-			return tagger.internalPlugin(thumbnailUrl, origin, "_plugin/cache", cache, "plugin/thumbnail");
 		}
 	}
 
 	@Timed(value = "jasper.cache")
-	public Ref save(String origin, InputStream in, String mimeType, String user) throws IOException {
+	public Ref save(String origin, String title, InputStream in, String mimeType, String ...tags) throws IOException {
 		var id = storage.store(origin, CACHE, in);
 		var cache = Cache.builder()
 			.id(id)
 			.mimeType(mimeType)
 			.contentLength(storage.size(origin, CACHE, id))
 			.build();
-		return tagger.internalPlugin("internal:" + id, origin, "_plugin/cache", cache, user);
+		return tagger.newPlugin("cache:" + id, title, origin, "_plugin/cache", cache, tags);
 	}
 
 	@Timed(value = "jasper.cache")
 	public void overwrite(String url, String origin, byte[] bytes) throws IOException {
-		var cache = getCache(fetch(url, origin));
+		var cache = cache(url, origin);
 		if (cache == null) throw new NotFoundException("Overwriting cache that does not exist");
 		storage.overwrite(origin, CACHE, cache.getId(), bytes);
+	}
+
+	@Timed(value = "jasper.cache")
+	public void push(String url, String origin, InputStream in) throws IOException {
+		if (!url.startsWith("cache:")) throw new NotFoundException("URL is not cacheable");
+		storage.storeAt(origin, CACHE, url.substring("cache:".length()), in);
+	}
+
+	@Timed(value = "jasper.cache")
+	public void push(String url, String origin, byte[] data) throws IOException {
+		if (!url.startsWith("cache:")) throw new NotFoundException("URL is not cacheable");
+		var id = url.substring("cache:".length());
+		if (storage.exists(origin, CACHE, id)) {
+			storage.overwrite(origin, CACHE, id, data);
+		} else {
+			storage.storeAt(origin, CACHE, id, data);
+		}
+	}
+
+	@Timed(value = "jasper.cache")
+	public boolean cacheExists(String url, String origin) {
+		if (!url.startsWith("cache:")) throw new NotFoundException("URL is not cacheable");
+		return storage.exists(origin, CACHE, url.substring("cache:".length()));
+	}
+
+	private String fetchExistingString(String url, String origin) {
+		var ref = stat(url, origin);
+		var cache = getCache(ref);
+		if (cache == null) return null;
+		if (bannedOrBroken(cache)) return null;
+		return new String(storage.get(origin, CACHE, cache.getId()));
 	}
 
 	private List<String> createArchive(String url, String origin, Cache cache) {
 		var moreScrape = new ArrayList<String>();
 		if (cache == null || isBlank(cache.getId())) return moreScrape;
 		// M3U8 Manifest
-		var data = fetchString(url, origin);
+		var data = fetchExistingString(url, origin);
 		if (data == null) return moreScrape;
-		if (data.trim().startsWith("#") && (url.endsWith(".m3u8") || cache.getMimeType().equals("application/x-mpegURL") || cache.getMimeType().equals("application/vnd.apple.mpegurl"))) {
-			try {
-				var urlObj = new URL(url);
+		try {
+			var urlObj = URI.create(url).toURL();
+			if (data.trim().startsWith("#") && (urlObj.getPath().endsWith(".m3u8") || cache.getMimeType().equalsIgnoreCase("application/x-mpegURL") || cache.getMimeType().equalsIgnoreCase("application/vnd.apple.mpegurl"))) {
 				var hostPath = urlObj.getProtocol() + "://" + urlObj.getHost() + Path.of(urlObj.getPath()).getParent().toString();
 				// TODO: Set archive base URL
-				var basePath = "/api/v1/scrape/fetch?url=";
+				var basePath = isNotBlank(origin) ? "/api/v1/proxy?origin=" + origin + "&url=" : "/api/v1/proxy?url=";
 				var buffer = new StringBuilder();
-				for (String line : data.split("\n")) {
+				for (var line : data.split("\n")) {
 					if (line.startsWith("#")) {
 						buffer.append(line).append("\n");
 					} else {
@@ -244,15 +323,15 @@ public class FileCache {
 					}
 				}
 				overwrite(url, origin, buffer.toString().getBytes());
-			} catch (Exception e) {}
-		}
+			}
+		} catch (Exception e) {}
 		return moreScrape;
 	}
 
 	private void cacheLater(String url, String origin) {
 		if (isBlank(url)) return;
 		url = fixUrl(url);
-		var ref = refRepository.findOneByUrlAndOrigin(url, origin).orElse(null);
+		var ref = stat(url, origin);
 		if (ref != null && (ref.hasTag("_plugin/cache") || ref.hasTag("_plugin/delta/cache"))) return;
 		tagger.internalTag(url, origin, "_plugin/delta/cache");
 	}
